--- a/strayacoin.conf
+++ b/strayacoin.conf
@@ -55,8 +55,8 @@ addnode=13.75.132.113:9666
 server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
-rpcuser=jack123user
-rpcpassword=jack123pass
+rpcuser=47crypt0user
+rpcpassword=47crypt0pass
 
 # How many seconds strayacoin will wait for a complete RPC HTTP request.
 # after the HTTP connection is established. 
