Updated server ip on main config file. Updated zip build script.

--- a/strayacoin.conf
+++ b/strayacoin.conf
@@ -35,7 +35,8 @@
 # Use as many addnode= settings as you like to connect to specific peers
 #addnode=azurenode.southcentralus.cloudapp.azure.com:9666
 #addnode=azurenode2.westeurope.cloudapp.azure.com:9666
-addnode=13.75.132.113:9666
+#addnode=13.75.132.113:9666
+addnode=13.75.145.120:9666
 
 # ... or use as many connect= settings as you like to connect ONLY
 # to specific peers:
